--- a/backup.config
+++ b/backup.config
@@ -1,3 +1,4 @@
 GHE_HOSTNAME="github.bus.zalan.do"
 GHE_DATA_DIR="/data/ghe-production-data"
 GHE_NUM_SNAPSHOTS=10
+GHE_EXTRA_SSH_OPTS=" -o StrictHostKeyChecking=no "
