--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: bash
 
 sudo: required
 
+before_install:
+    - sudo apt-get install -y unattended-upgrades python3 python3-dev python3-pip python3-yaml
+    - sudo pip3 install --upgrade boto boto3
+    - sudo pip3 install pyyaml --upgrade
+    - sudo pip3 install requests --upgrade
+
 script:
     - bash travis.sh
