--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: c
 
-sudo: required
+#sudo: required
 
 before_install:
-    - apt-get install python3 python3-dev python3-pip python3-yaml
+    - apt-get install python3
+    - apt-get install python3-dev
+    - apt-get install python3-pip
+    - apt-get install python3-yaml
     - sudo pip3 install --upgrade boto boto3
     - sudo pip3 install pyyaml --upgrade
     - sudo pip3 install requests --upgrade
