--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: c
 
 sudo: required
 
-before_install:
+install:
     - sudo apt-get install python3
-    - apt-get install python3-dev
+    - sudo apt-get install python3-dev
     - apt-get install python3-pip
     - apt-get install python3-yaml
     - sudo pip3 install --upgrade boto boto3
