--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 install:
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
-    - apt-get install python3-pip
+    - sudo apt-get install python3-pip
     - apt-get install python3-yaml
     - sudo pip3 install --upgrade boto boto3
     - sudo pip3 install pyyaml --upgrade
