--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-language: c
-
-sudo: required
-
-install:
-    - sudo apt-get install python3
-    - sudo apt-get install python3-dev
-    - sudo apt-get install python3-pip
-    - apt-get install python3-yaml
-    - sudo pip3 install --upgrade boto boto3
-    - sudo pip3 install pyyaml --upgrade
-    - sudo pip3 install requests --upgrade
+language: bash
+#sudo: required
+before_install:
+    - sudo apt-get update
+    #- sudo apt-get install python3
+    #- sudo apt-get install python3-dev
+    #- sudo apt-get install python3-pip
+    #- apt-get install python3-yaml
+    #- sudo pip3 install --upgrade boto boto3
+    #- sudo pip3 install pyyaml --upgrade
+    #- sudo pip3 install requests --upgrade
 
 script:
     - sh ./travis.sh
