--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: bash
 #sudo: required
 before_install:
     - sudo apt-get update
-    #- sudo apt-get install python3
-    #- sudo apt-get install python3-dev
+    - sudo apt-get install python3
+    - sudo apt-get install python3-dev
     #- sudo apt-get install python3-pip
     #- apt-get install python3-yaml
     #- sudo pip3 install --upgrade boto boto3
