another apt-get attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
-    #- sudo apt-get install python3-pip
+    - sudo apt-get install python3-pip
     - sudo apt-get install python3-yaml
     - sudo pip3 install --upgrade boto boto3
     - sudo pip3 install pyyaml --upgrade
