--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
-    - sudo apt-get install python3-pip
+    #- sudo apt-get install python3-pip
     - sudo apt-get install python3-yaml
-    - sudo pip3 install --upgrade boto boto3
-    - sudo pip3 install pyyaml --upgrade
-    - sudo pip3 install requests --upgrade
+    - sudo pip install --upgrade boto boto3
+    - sudo pip install pyyaml --upgrade
+    - sudo pip install requests --upgrade
 
 script:
     - sh ./travis.sh
