--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - sudo apt-get install python3-dev
     #- sudo apt-get install python3-pip
     - sudo apt-get install python3-yaml
-    - sudo pip3 install --upgrade boto boto3
+    - sudo pip3 install boto3 --upgrade
     - sudo pip3 install pyyaml --upgrade
     - sudo pip3 install requests --upgrade
 cache:
