--- a/.zappr.yml
+++ b/.zappr.yml
@@ -3,7 +3,7 @@ approvals:
   # PR needs at least 4 approvals
   minimum: 2
   # approval = comment that matches this regex
-  pattern: "^:\\+1:$"
+  pattern: "^(:\\+1:|👍|LGTM|lgtm)$"
   from:
     # commenter must be either one of:
     # a public zalando org member
