https://github.com/zalando/ghe-backup/issues/20 nosetests call to be changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ cache:
 
 script:
     - sh ./travis.sh
-    - nosetests -w python -v --nocapture testDeleteInstuckProgress.py
+#    - nosetests -w python -v --nocapture testDeleteInstuckProgress.py
