https://github.com/zalando/ghe-backup/issues/20 2nd shell script added

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,4 @@ cache:
   apt: true
 
 script:
-    - sh ./travis.sh
-#    - nosetests -w python -v --nocapture testDeleteInstuckProgress.py
+    - sh ./travis_bash.sh
