https://github.com/zalando/ghe-backup/issues/20 nose install added to travis.yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
     - sudo pip install boto3 --upgrade
     - sudo pip install pyyaml --upgrade
     - sudo pip install requests --upgrade
+    - sudo pip install nose --upgrade
 
 cache:
   apt: true
