--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,26 @@
-language: bash
+language: python
 
 before_install:
-    - sudo apt-get update
-    - sudo apt-get install python3
-    - sudo apt-get install python3-dev
-    - sudo apt-get install python3-yaml
-    - sudo pip install boto3 --upgrade
-    - sudo pip install pyyaml --upgrade
-    - sudo pip install requests --upgrade
-    - sudo pip install nose --upgrade
-
-cache:
-  apt: true
+    - pip install nose --upgrade
 
 script:
-    - sh ./travis_bash.sh
-    - sh ./travis_deleteInstuckProgress.sh
+    - nosetests -w python -v --nocapture test_delete_instuck_progress.py
+
+#language: bash
+#
+#before_install:
+#    - sudo apt-get update
+#    - sudo apt-get install python3
+#    - sudo apt-get install python3-dev
+#    - sudo apt-get install python3-yaml
+#    - sudo pip install boto3 --upgrade
+#    - sudo pip install pyyaml --upgrade
+#    - sudo pip install requests --upgrade
+#    - sudo pip install nose --upgrade
+#
+#cache:
+#  apt: true
+#
+#script:
+#    - sh ./travis_bash.sh
+#    - sh ./travis_deleteInstuckProgress.sh
