--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
-language: bash
+language: python
+
+python:
+  - "3.4"
 
 before_install:
     - sudo apt-get update
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
     - sudo apt-get install python3-yaml
-    - sudo pip install boto3 --upgrade
-    - sudo pip install pyyaml --upgrade
-    - sudo pip install requests --upgrade
-    - sudo pip install nose --upgrade
+    - sudo pip3 install boto3 --upgrade
+    - sudo pip3 install pyyaml --upgrade
+    - sudo pip3 install requests --upgrade
+    - sudo pip3 install nose --upgrade
 
 cache:
   apt: true
 
 script:
     - sh ./travis_bash.sh
-    #- sh ./travis_deleteInstuckProgress.sh
+    - sh ./travis_deleteInstuckProgress.sh
