--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
     - sudo apt-get install python3-yaml
-    - sudo pip3 install boto3 --upgrade
-    - sudo pip3 install pyyaml --upgrade
-    - sudo pip3 install requests --upgrade
-    - sudo pip3 install nose --upgrade
+    - sudo pip install boto3 --upgrade
+    - sudo pip install pyyaml --upgrade
+    - sudo pip install requests --upgrade
+    - sudo pip install nose --upgrade
 
 cache:
   apt: true
