https://github.com/zalando/ghe-backup/issues/40 reverting https://github.com/zalando/ghe-backup/pull/43/commits/e75e8992aa103256402ecf32cbaf441e295be8aa and chown and chmod on trigger file.

--- a/DockerfileAutomata
+++ b/DockerfileAutomata
@@ -44,10 +44,12 @@ RUN \
   chown -R application: /backup && \
   chown -R application: /kms && \
   chown -R application: /delete-instuck-backups && \
+  chown -R application: /trigger_ghebackup.py && \
   chmod 0700 /kms/extract_decrypt_kms.py && \
   chmod 0700 /kms/convert-kms-private-ssh-key.sh && \
   chmod 0644 /etc/cron.d/ghe-backup && \
   chmod 0700 /delete-instuck-backups/delete_instuck_progress.py && \
+  chmod 0700 /trigger_ghebackup.py && \
   chmod 0700 /backup/final-docker-cmd.sh && \
   mkfifo /var/log/ghe-prod-backup.log
 
