--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_install:
     - sudo apt-get install python3-dev
     - sudo apt-get install python3-yaml
     - sudo pip install boto3 --upgrade
-    - sudo pip install pyyaml --upgrade
+    #- sudo pip install pyyaml --upgrade
     - sudo pip install requests --upgrade
     - sudo pip install nose --upgrade
+    - sudo python -m pip install pyyaml
 
 cache:
   apt: true
