https://github.com/zalando/ghe-backup/issues/40 pip3

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get install python3
     - sudo apt-get install python3-dev
     - sudo apt-get install python3-yaml
-    - pip install -r python/requirements.txt
+    - pip3 install -r python/requirements.txt
 
 cache:
   apt: true
