--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ language: python
 python:
   - "3.4"
 
-before_install:
-    - sudo apt-get update
-    - sudo apt-get install python3
-    - sudo apt-get install python3-dev
-    - sudo apt-get install python3-yaml
-    - pip3 install -r python/requirements.txt
+#before_install:
+#    - sudo apt-get update
+#    - sudo apt-get install python3
+#    - sudo apt-get install python3-dev
+#    - sudo apt-get install python3-yaml
+
+install:
+    - pip install .
+    - pip install --user -r python/requirements.txt
 
 cache:
   apt: true
