Re-enable test_trigger_ghebackup

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ cache:
 script:
     - nosetests -w python -v --nocapture test_extract_decrypt_kms.py
     - nosetests -w python -v --nocapture test_delete_instuck_progress.py
-    # nosetests -w python -v --nocapture test_trigger_ghebackup.py travis causes CalledProcessErrors
+    - nosetests -w python -v --nocapture test_trigger_ghebackup.py
