--- a/DockerfileAutomata
+++ b/DockerfileAutomata
@@ -27,7 +27,7 @@ COPY backup.config /backup/backup-utils/backup.config
 # copy files to decrypt private ssh key using kms
 COPY python/extract_decrypt_kms.py /kms/extract_decrypt_kms.py
 COPY convert-kms-private-ssh-key.sh /kms/convert-kms-private-ssh-key.sh
-COPY python/trigger_ghebackup.py /trigger_ghebackup.py
+COPY start_backup.sh /start_backup.sh
 
 # copy file to drop in stuck backup
 COPY python/delete_instuck_progress.py /delete-instuck-backups/delete_instuck_progress.py
@@ -44,12 +44,12 @@ RUN \
   chown -R application: /backup && \
   chown -R application: /kms && \
   chown -R application: /delete-instuck-backups && \
-  chown -R application: /trigger_ghebackup.py && \
+  chown -R application: /start_backup.sh && \
   chmod 0700 /kms/extract_decrypt_kms.py && \
   chmod 0700 /kms/convert-kms-private-ssh-key.sh && \
   chmod 0644 /etc/cron.d/ghe-backup && \
   chmod 0700 /delete-instuck-backups/delete_instuck_progress.py && \
-  chmod 0700 /trigger_ghebackup.py && \
+  chmod 0700 /start_backup.sh && \
   chmod 0700 /backup/final-docker-cmd.sh && \
   mkfifo /var/log/ghe-prod-backup.log
 
