--- a/.zappr.yml
+++ b/.zappr.yml
@@ -1,6 +1,5 @@
 # https://github.com/zalando/zappr/blob/master/.zappr-example.yml
 approvals:
-  # PR needs at least 4 approvals
   minimum: 1
   # approval = comment that matches this regex
   pattern: "^(:\\+1:|👍|LGTM|lgtm)$"
@@ -9,5 +8,5 @@ approvals:
     # a public zalando org member
     orgs:
       - zalando
-X-Zalando-Team: "bus"
+X-Zalando-Team: bus
 X-Zalando-Type: code
