--- a/delivery.yaml
+++ b/delivery.yaml
@@ -1,6 +1,6 @@
 build_steps:
 
-- desc: "test stuff"
+- desc: "setup the environment"
   cmd: |
     apt-get update
     apt-get install -y python3-dev python-pip #python3-pip
