--- a/delivery.yaml
+++ b/delivery.yaml
@@ -10,11 +10,11 @@ build_steps:
     pip --version
     pip install -r python/requirements.txt
 
-- desc: Run tests
+- desc: "run tests"
   cmd: |
     nosetests -w python
 
-- desc: Build and push Docker image
+- desc: "build and push docker images"
   cmd: |
     IMAGE=pierone.stups.zalan.do/machinery/ghe-backup:${CDP_BUILD_VERSION}
     ### bus one
