--- a/delivery.yaml
+++ b/delivery.yaml
@@ -5,6 +5,8 @@ build_steps:
     apt-get update
     apt-get install -y python3-dev python-pip #python3-pip
     curl -sSL https://delivery.cloud.zalando.com/utils/ensure-docker | sh
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+    python --version
     pip install --upgrade pip
     #pip3 --version
     pip --version
