--- a/delivery.yaml
+++ b/delivery.yaml
@@ -19,6 +19,7 @@ build_steps:
 
 - desc: "build and push docker images"
   cmd: |
+    python --version
     IMAGE=pierone.stups.zalan.do/machinery/ghe-backup:${CDP_BUILD_VERSION}
     ### bus one
     DOCKERFILE=DockerfileBus
