--- a/delivery.yaml
+++ b/delivery.yaml
@@ -6,21 +6,16 @@ build_steps:
     apt-get install -y python3-dev python-pip python3-pip
     curl -sSL https://delivery.cloud.zalando.com/utils/ensure-docker | sh
     sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-    python --version
-    pip3 --version
-    pip --version
     pip install -r python/requirements.txt
 
 - desc: "run tests"
   cmd: |
-    python --version
     nosetests -w python
 
 - desc: "build and push docker images"
   cmd: |
-    python --version
     IMAGE=pierone.stups.zalan.do/machinery/ghe-backup:${CDP_BUILD_VERSION}
-    ### bus one
+    ### bus one ##########################
     DOCKERFILE=DockerfileBus
     docker build -t $IMAGE -f $DOCKERFILE .
     IS_PR_BUILD=${CDP_PULL_REQUEST_NUMBER+true}
@@ -29,7 +24,7 @@ build_steps:
     else
       docker push $IMAGE
     fi
-    ### automata one
+    ### automata one ##########################
     DOCKERFILE=DockerfileAutomata
     docker build -t $IMAGE -f $DOCKERFILE .
     IS_PR_BUILD=${CDP_PULL_REQUEST_NUMBER+true}
