--- a/delivery.yaml
+++ b/delivery.yaml
@@ -3,11 +3,9 @@ build_steps:
 - desc: "setup the environment"
   cmd: |
     apt-get update
-    apt-get install -y python3-dev python-pip #python3-pip
+    apt-get install -y python3-dev python-pip python3-pip
     curl -sSL https://delivery.cloud.zalando.com/utils/ensure-docker | sh
-    pip install --upgrade pip
-    #pip3 --version
-    pip --version
+    sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
     pip install -r python/requirements.txt
 
 - desc: "run tests"
@@ -17,7 +15,7 @@ build_steps:
 - desc: "build and push docker images"
   cmd: |
     IMAGE=pierone.stups.zalan.do/machinery/ghe-backup:${CDP_BUILD_VERSION}
-    ### bus one
+    ### bus one ##########################
     DOCKERFILE=DockerfileBus
     docker build -t $IMAGE -f $DOCKERFILE .
     IS_PR_BUILD=${CDP_PULL_REQUEST_NUMBER+true}
@@ -26,7 +24,7 @@ build_steps:
     else
       docker push $IMAGE
     fi
-    ### automata one
+    ### automata one ##########################
     DOCKERFILE=DockerfileAutomata
     docker build -t $IMAGE -f $DOCKERFILE .
     IS_PR_BUILD=${CDP_PULL_REQUEST_NUMBER+true}
