echo about pushed image

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -19,6 +19,7 @@ build_steps:
     docker build -t $IMAGE -f DockerfileBus .
     if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
       docker push $IMAGE
+      echo "$IMAGE pushed"
     else
       echo "Image not pushed because the build is not a push to master"
     fi
@@ -27,6 +28,7 @@ build_steps:
     docker build -t $IMAGE -f DockerfileAutomata .
     if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
       docker push $IMAGE
+      echo "$IMAGE pushed"
     else
       echo "Image not pushed because the build is not a push to master"
     fi
