--- a/DockerfileBus
+++ b/DockerfileBus
@@ -16,6 +16,7 @@ WORKDIR /backup
 RUN \
   apt-get update -y && \
   apt-get install -y unattended-upgrades python3 python3-dev python3-pip python3-yaml language-pack-en git && \
+  pip3 install --upgrade pip3 && \
   pip3 install --upgrade boto boto3 && \
   rm -rf /var/lib/apt/lists/* && \
   git clone -b stable https://github.com/github/backup-utils.git && \
@@ -59,9 +60,5 @@ RUN \
 RUN \
   touch /var/log/ghe-delete-instuck-progress.log && \
   chown -R application: /var/log/ghe-delete-instuck-progress.log
-
-RUN \
-  python3 --version
-
 
 CMD ["/backup/final-docker-cmd.sh"]
