--- a/delivery.yaml
+++ b/delivery.yaml
@@ -1,16 +1,16 @@
 version: "2017-09-20"
 pipeline:
-  - id: build & test
+  - id: build and test
     type: script
     commands:
-      - desc: "setup the environment"
+      - desc: setup the environment
       cmd: |
         apt-get update
         apt-get install -y python3-dev python-pip python3-pip
         curl -sSL https://delivery.cloud.zalando.com/utils/ensure-docker | sh
         sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
         pip install -r python/requirements.txt
-      - desc: "run tests"
+      - desc: run tests
         cmd: |
           nosetests -w python
   - id: deploy
@@ -18,7 +18,7 @@ pipeline:
     when:
       branch: master
     commands:
-      - desc: "build and push docker images"
+      - desc: build and push docker images
         cmd: |
           ### bus one ##########################
           IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-bus:cdp-${CDP_BUILD_VERSION}
