--- a/delivery.yaml
+++ b/delivery.yaml
@@ -10,3 +10,9 @@ pipeline:
           curl -sSL https://delivery.cloud.zalando.com/utils/ensure-docker | sh
           sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
           pip install -r python/requirements.txt
+  - id: test
+    type: script
+    commands:
+      - desc: "run tests"
+        cmd: |
+          nosetests -w python
