--- a/delivery.yaml
+++ b/delivery.yaml
@@ -13,3 +13,20 @@ pipeline:
       - desc: "run tests"
         cmd: |
           nosetests -w python
+  - id: deploy
+    type: script
+    when:
+      branch: master
+    commands:
+      - desc: "build and push docker images"
+        cmd: |
+          ### bus one ##########################
+          IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-bus:cdp-${CDP_BUILD_VERSION}
+          docker build -t $IMAGE -f DockerfileBus .
+          docker push $IMAGE
+          echo "$IMAGE pushed"
+          ### automata one ##########################
+          IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-automata:cdp-${CDP_BUILD_VERSION}
+          docker build -t $IMAGE -f DockerfileAutomata .
+          docker push $IMAGE
+          echo "$IMAGE pushed"
