--- a/delivery.yaml
+++ b/delivery.yaml
@@ -21,7 +21,10 @@ pipeline:
           BASE_IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-bus
           #IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-bus:cdp-${CDP_BUILD_VERSION}
           IMAGE=$BASEIMAGE:cdp-${CDP_BUILD_VERSION}
-          CACHE_IMAGE=$$BASEIMAGE:latest
+          CACHE_IMAGE=$BASEIMAGE:latest
+          echo "$BASE_IMAGE"
+          echo "$IMAGE"
+          echo "$CACHE_IMAGE"
           #if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
           #docker build -t $IMAGE -f DockerfileBus .
           docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileBus .
