--- a/backup.config
+++ b/backup.config
@@ -1,4 +1,4 @@
-GHE_HOSTNAME="github.bus.zalan.do"
+GHE_HOSTNAME="github-master.bus.zalan.do"
 GHE_DATA_DIR="/data/ghe-production-data"
 GHE_NUM_SNAPSHOTS=40
 GHE_EXTRA_SSH_OPTS=" -o StrictHostKeyChecking=no "
