--- a/DockerfileAutomata
+++ b/DockerfileAutomata
@@ -15,7 +15,7 @@ WORKDIR /backup
 # clone backup-utils
 RUN \
   apt-get update -y && \
-  apt-get install -y unattended-upgrades python3 python3-dev python3-pip python3-yaml language-pack-en git && \
+  apt-get install -y unattended-upgrades python3 python3-dev python3-pip python3-yaml language-pack-en git screen && \
   pip3 install --upgrade boto boto3 && \
   rm -rf /var/lib/apt/lists/* && \
   git clone -b stable https://github.com/github/backup-utils.git && \
