--- a/delivery.yaml
+++ b/delivery.yaml
@@ -26,24 +26,23 @@ pipeline:
           echo "$BASE_IMAGE"
           echo "$IMAGE"
           echo "$CACHE_IMAGE"
-          #if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
-          #docker build -t $IMAGE -f DockerfileBus .
-          docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileBus .
-          docker push $IMAGE
-          echo "$IMAGE pushed"
-          #else
-          #  echo "Image not pushed because the build is not a push to master"
-          #fi
+          if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
+            docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileBus .
+            docker push $IMAGE
+            echo "$IMAGE pushed"
+          else
+            echo "Image not pushed because the build is not a push to master"
+          fi
           ### automata one ##########################
           BASE_IMAGE=$PIERONE_NAMESPACE/ghe-backup-automata
           #IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-automata:cdp-${CDP_BUILD_VERSION}
           IMAGE=$BASE_IMAGE:cdp-${CDP_BUILD_VERSION}
           CACHE_IMAGE=$BASE_IMAGE:latest
-          #if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
-          #docker build -t $IMAGE -f DockerfileAutomata .
-          docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileAutomata .
-          docker push $IMAGE
-          echo "$IMAGE pushed"
-          #else
-          #  echo "Image not pushed because the build is not a push to master"
-          #fi
+          if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
+            #docker build -t $IMAGE -f DockerfileAutomata .
+            docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileAutomata .
+            docker push $IMAGE
+            echo "$IMAGE pushed"
+          else
+            echo "Image not pushed because the build is not a push to master"
+            fi
