--- a/delivery.yaml
+++ b/delivery.yaml
@@ -17,30 +17,13 @@ pipeline:
           nosetests -w python
       - desc: "build and push docker images"
         cmd: |
-          ### bus one ##########################
-          PIERONE_NAMESPACE=pierone.stups.zalan.do/machinery
-          BASE_IMAGE=$PIERONE_NAMESPACE/ghe-backup-bus
-          #IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-bus:cdp-${CDP_BUILD_VERSION}
-          IMAGE=$BASE_IMAGE:cdp-${CDP_BUILD_VERSION}
-          CACHE_IMAGE=$BASE_IMAGE:latest
-          echo "$BASE_IMAGE"
-          echo "$IMAGE"
-          echo "$CACHE_IMAGE"
-          if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
-            docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileBus .
-            docker push $IMAGE
-            echo "$IMAGE pushed"
-          else
-            echo "Image not pushed because the build is not a push to master"
-          fi
-          ### automata one ##########################
           BASE_IMAGE=$PIERONE_NAMESPACE/ghe-backup-automata
           #IMAGE=pierone.stups.zalan.do/machinery/ghe-backup-automata:cdp-${CDP_BUILD_VERSION}
           IMAGE=$BASE_IMAGE:cdp-${CDP_BUILD_VERSION}
           CACHE_IMAGE=$BASE_IMAGE:latest
           if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
-            #docker build -t $IMAGE -f DockerfileAutomata .
-            docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f DockerfileAutomata .
+            #docker build -t $IMAGE -f Dockerfile .
+            docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f Dockerfile .
             docker push $IMAGE
             echo "$IMAGE pushed"
           else
