Pier One namespace and ghe-backup docker image

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -17,6 +17,7 @@ pipeline:
           nosetests -w python
       - desc: "build and push docker images"
         cmd: |
+          PIERONE_NAMESPACE=pierone.stups.zalan.do/machinery
           BASE_IMAGE=$PIERONE_NAMESPACE/ghe-backup
           IMAGE=$BASE_IMAGE:cdp-${CDP_BUILD_VERSION}
           CACHE_IMAGE=$BASE_IMAGE:latest
