--- a/delivery.yaml
+++ b/delivery.yaml
@@ -21,8 +21,8 @@ pipeline:
           BASE_IMAGE=$PIERONE_NAMESPACE/ghe-backup
           IMAGE=$BASE_IMAGE:cdp-${CDP_BUILD_VERSION}
           CACHE_IMAGE=$BASE_IMAGE:latest
-          #docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f Dockerfile .
-          docker build -t $IMAGE -f Dockerfile .
+          docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f Dockerfile .
+          #docker build -t $IMAGE -f Dockerfile .
           if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
             docker push $IMAGE
             echo "$IMAGE pushed"
