--- a/delivery.yaml
+++ b/delivery.yaml
@@ -23,9 +23,9 @@ pipeline:
           CACHE_IMAGE=$BASE_IMAGE:latest
           docker build --cache-from $CACHE_IMAGE -t $CACHE_IMAGE -t $IMAGE -f Dockerfile .
           #docker build -t $IMAGE -f Dockerfile .
-          if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
-            docker push $IMAGE
-            echo "$IMAGE pushed"
-          else
-            echo "Image not pushed because the build is not a push to master"
-            fi
+          #if [ -z "$CDP_PULL_REQUEST_NUMBER" ]; then
+          docker push $IMAGE
+          echo "$IMAGE pushed"
+          #else
+          #  echo "Image not pushed because the build is not a push to master"
+          #  fi
